# AetherArchives

./: Makefile  README.md  docker-compose.yml
backend/core/: .dockerignore  .env  Dockerfile  Makefile  pyproject.toml
backend/core/config/: urls.py  yasg.py
backend/core/config/settings/: __init__.py  base.py  constants.py  security.py
backend/core/src/: routes.py
backend/core/src/core/: admin.py  storage.py
backend/core/src/core/migrations/: 0001_initial.py  0002_alter_aetheruser_managers_and_more.py  0003_aetheruser_is_staff_alter_aetheruser_created_at.py  0004_alter_aetheruser_managers.py  0005_alter_aetheruser_username.py  0006_aetheruser_avatar.py  0007_aetheruser_bio.py
backend/core/src/core/mixins/: __init__.py  template_view_mixins.py
backend/core/src/core/models/: __init__.py  aether_user.py  manual_settings.py
backend/core/src/core/utils/: __init__.py
backend/core/src/memos/: admin.py  apps.py  urls.py
backend/core/src/memos/migrations/: 0001_initial.py  0002_uploadedmemo_title.py
backend/core/src/memos/models/: __init__.py  uploaded_memo.py
backend/core/src/memos/services/specification/: __init__.py  memo_specification.py
backend/core/src/memos/views/: upload_memo_view.py
backend/core/src/pages/: apps.py  urls.py
backend/core/src/pages/templates/: create_memo_page.html  user_page.html
backend/core/src/pages/templates/memo/: create_memo_page.html  (+1 more)
backend/core/src/pages/views/: __init__.py  avatar_upload_view.py  create_memo_page.py  register_page.py  update_memo_view.py  user_page.py
backend/core/templates/base/: base.html
(+28 files in other folders)
